# Cronis

./: .gitignore  AI_CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  Cronis.txt  LICENSE  README.md  VISION.md  build.gradle  gradle.properties  settings.gradle
.cursor/rules/: git.mdc  java.mdc  project.mdc  ui.mdc
design/: Colors.md  Components.md  Design-Language.md  Design-System.md  Spacing.md  Themes.md  Typography.md  Window.md
docs/: Animation-Engine.md  Animation-System.md  Architecture.md  Coding-Standards.md  Component-System.md  Project-Architecture.md  Rendering.md  Theme-Engine.md  Widget-Engine.md  Widget-System.md
native/windows/smtc/: CMakeLists.txt  cronis_smtc.cpp
planning/: Development-Roadmap.md  Development-Todo.md
scripts/: gen-icons.ps1
src/client/java/dev/cronis/assets/: AssetManager.java  AssetRegistry.java
src/client/java/dev/cronis/client/: CronisClient.java
src/client/java/dev/cronis/editor/: SnapGuide.java  SnapGuideBuffer.java  WidgetDragController.java  WidgetEditorContext.java  WidgetGrid.java  WidgetOverlayRenderer.java  WidgetResizeController.java  WidgetScaleController.java  WidgetSelectionManager.java  WidgetSnapEngine.java
src/client/java/dev/cronis/metrics/: ClientMetricsService.java
src/client/java/dev/cronis/util/: LinkOpener.java
src/client/java/dev/cronis/widget/: DemoWidget.java  MetricWidgetLayout.java  (+12 more)
src/client/resources/: cronis.client.mixins.json
src/main/java/dev/cronis/: Cronis.java
src/main/resources/: cronis.mixins.json  fabric.mod.json
src/main/resources/scripts/: windows-smtc-query.ps1
(+141 files in other folders)
